# ShodanDataProcessing

./: .device_facets.txt.swp  .gitignore  .miti.py.swp  .miti_facets.py.swp  .miti_mihani.py.swp  .search_devices_exploits.py.swp  .search_exploit_and_device.py.swp  IoT_exploits.py  IoT_facets.py  IoT_openPorts.py  README.md  assistants.txt  device_search_results.txt  experiment_api.py  exploits.csv  exploits2020-03-26 15:29:24.174324.txt  exploits2020-03-26 16:38:43.155962.txt  exploits2020-03-26 16:43:54.870042.txt  miti.py  miti_facets.py  miti_mihani.py  port_results.csv  printer.txt  printer_facets.txt  pyproject.toml  results_search_exploit_and_device.txt  search_devices_exploits.py  search_exploit_and_device.py  test.sh  test.txt  webcam_facets.txt  webcams.txt  webcams_devices.txt  webcams_telnet.txt
data/: device_facets.txt  device_facets_03252020.txt  device_facets_postprocessed.txt  exploits2020-03-31 12:20:17.308365.txt  exploits2020-04-01 17:24:24.954500.txt  router_facets.txt  routers.txt  webcams_services.txt
features/: ports.csv
hosts/: devices.csv
old_code/: search_devices_exploits.py  shodanSearch.py
shodan/: find_interesting_hosts.py  host_cves.py
workflows/: facets.py
