[tool.poetry]
name = "shodandataprocessing"
version = "0.1.0"
description = ""
authors = ["drx <xenia.mountrouidou@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.8"
shodan = "^1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
